# acamcatch

./: .gitignore  __init__.py  main.py  pyproject.toml
app/: settings.py
app/database/: db_actions.py
app/errors/: ui_validations.py
app/log/: logger_config.json
app/log/save_logs/: capture_stream.jsonl
app/ui/: command_line.py
